--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "node": ">=0.10"
   },
   "dependencies": {
-
+    "qs": "^4.0.0"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
     "clydeio": "^0.2.0",
     "eslint": "^0.24.0",
     "mocha": "^2.2.5",
